Bug 193754 - trying to close application
Summary: trying to close application
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
: 198147 198581 230424 233130 248139 250581 251426 256186 259061 263192 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-05-23 12:21 UTC by Michał Kudła
Modified: 2011-12-04 08:01 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michał Kudła 2009-05-23 12:21:27 UTC
Application that crashed: ksysguard
Version of the application: 4.2.87 (KDE 4.2.87 (KDE 4.3 >= 20090519))
KDE Version: 4.2.87 (KDE 4.2.87 (KDE 4.3 >= 20090519))
Qt Version: 4.5.1
Operating System: Linux 2.6.28-gentoo-r2 i686
Distribution: "Gentoo Base System release 2.0.0"

What I was doing when the application crashed:
When I try to close window I getted this crash

 -- Backtrace:
Application: Monitor systemowy (ksysguard), signal: Segmentation fault
[KCrash Handler]
#5  0x00000000 in ?? ()
#6  0xb7f4a7e7 in ~WorkSheet (this=0x81fa400) at /var/tmp/portage/kde-base/ksysguard-4.2.87/work/ksysguard-4.2.87/ksysguard/gui/WorkSheet.cc:87
#7  0xb72b7b1d in QObjectPrivate::deleteChildren () from /usr/lib/qt4/libQtCore.so.4
#8  0xb6a7b8d2 in QWidget::~QWidget () from /usr/lib/qt4/libQtGui.so.4
#9  0xb6dfd2f2 in QFrame::~QFrame () from /usr/lib/qt4/libQtGui.so.4
#10 0xb6e62f76 in QStackedWidget::~QStackedWidget () from /usr/lib/qt4/libQtGui.so.4
#11 0xb72b7b1d in QObjectPrivate::deleteChildren () from /usr/lib/qt4/libQtCore.so.4
#12 0xb6a7b8d2 in QWidget::~QWidget () from /usr/lib/qt4/libQtGui.so.4
#13 0xb6e73342 in QTabWidget::~QTabWidget () from /usr/lib/qt4/libQtGui.so.4
#14 0xb786fe83 in ~KTabWidget (this=0x8163108) at /var/tmp/portage/kde-base/kdelibs-4.2.87/work/kdelibs-4.2.87/kdeui/widgets/ktabwidget.cpp:254
#15 0xb7f4e660 in ~Workspace (this=0x8163108) at /var/tmp/portage/kde-base/ksysguard-4.2.87/work/ksysguard-4.2.87/ksysguard/gui/Workspace.cc:56
#16 0xb72b7b1d in QObjectPrivate::deleteChildren () from /usr/lib/qt4/libQtCore.so.4
#17 0xb6a7b8d2 in QWidget::~QWidget () from /usr/lib/qt4/libQtGui.so.4
#18 0xb6dfd2f2 in QFrame::~QFrame () from /usr/lib/qt4/libQtGui.so.4
#19 0xb6e5d46b in QSplitter::~QSplitter () from /usr/lib/qt4/libQtGui.so.4
#20 0xb72b7b1d in QObjectPrivate::deleteChildren () from /usr/lib/qt4/libQtCore.so.4
#21 0xb6a7b8d2 in QWidget::~QWidget () from /usr/lib/qt4/libQtGui.so.4
#22 0xb6e17232 in QMainWindow::~QMainWindow () from /usr/lib/qt4/libQtGui.so.4
#23 0xb784b64a in ~KMainWindow (this=0x8155548) at /var/tmp/portage/kde-base/kdelibs-4.2.87/work/kdelibs-4.2.87/kdeui/widgets/kmainwindow.cpp:467
#24 0xb7889077 in ~KXmlGuiWindow (this=0x8155548, __vtt_parm=0xb7f64cf4) at /var/tmp/portage/kde-base/kdelibs-4.2.87/work/kdelibs-4.2.87/kdeui/xmlgui/kxmlguiwindow.cpp:127
#25 0xb7f56a4c in ~TopLevel (this=0x8155548) at /var/tmp/portage/kde-base/ksysguard-4.2.87/work/ksysguard-4.2.87/ksysguard/gui/ksysguard.h:38
#26 0xb72b77e5 in qDeleteInEventHandler () from /usr/lib/qt4/libQtCore.so.4
#27 0xb72b93eb in QObject::event () from /usr/lib/qt4/libQtCore.so.4
#28 0xb6a84458 in QWidget::event () from /usr/lib/qt4/libQtGui.so.4
#29 0xb6e1799f in QMainWindow::event () from /usr/lib/qt4/libQtGui.so.4
#30 0xb784d293 in KMainWindow::event (this=0x8b55c18, ev=0x8b55c18) at /var/tmp/portage/kde-base/kdelibs-4.2.87/work/kdelibs-4.2.87/kdeui/widgets/kmainwindow.cpp:1094
#31 0xb7888eec in KXmlGuiWindow::event (this=0x8155548, ev=0x8b55c18) at /var/tmp/portage/kde-base/kdelibs-4.2.87/work/kdelibs-4.2.87/kdeui/xmlgui/kxmlguiwindow.cpp:131
#32 0xb7f535ff in TopLevel::event (this=0x8155548, e=0x8b55c18) at /var/tmp/portage/kde-base/ksysguard-4.2.87/work/ksysguard-4.2.87/ksysguard/gui/ksysguard.cc:329
#33 0xb6a30f1c in QApplicationPrivate::notify_helper () from /usr/lib/qt4/libQtGui.so.4
#34 0xb6a39b0a in QApplication::notify () from /usr/lib/qt4/libQtGui.so.4
#35 0xb77813d0 in KApplication::notify (this=0x80767a8, receiver=0x8155548, event=0x8b55c18) at /var/tmp/portage/kde-base/kdelibs-4.2.87/work/kdelibs-4.2.87/kdeui/kernel/kapplication.cpp:302
#36 0xb72a9b72 in QCoreApplication::notifyInternal () from /usr/lib/qt4/libQtCore.so.4
#37 0xb72aa4b2 in QCoreApplicationPrivate::sendPostedEvents () from /usr/lib/qt4/libQtCore.so.4
#38 0xb72aa64e in QCoreApplication::sendPostedEvents () from /usr/lib/qt4/libQtCore.so.4
#39 0xb72d1d80 in ?? () from /usr/lib/qt4/libQtCore.so.4
#40 0x00000000 in ?? ()
Comment 1 Dario Andres 2009-06-28 15:59:22 UTC
*** Bug 198147 has been marked as a duplicate of this bug. ***
Comment 2 Dario Andres 2009-07-07 13:15:11 UTC
*** Bug 198581 has been marked as a duplicate of this bug. ***
Comment 3 Nicolas L. 2010-08-17 14:03:41 UTC
*** Bug 248139 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2010-10-11 13:52:38 UTC
*** Bug 251426 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2010-10-11 14:01:38 UTC
*** Bug 250581 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2010-10-11 14:02:53 UTC
*** Bug 233130 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2010-10-11 14:04:07 UTC
*** Bug 230424 has been marked as a duplicate of this bug. ***
Comment 8 Pino Toscano 2010-11-06 01:56:38 UTC
*** Bug 256186 has been marked as a duplicate of this bug. ***
Comment 9 Pino Toscano 2010-12-06 23:17:55 UTC
*** Bug 259061 has been marked as a duplicate of this bug. ***
Comment 10 Pino Toscano 2011-01-15 01:44:54 UTC
*** Bug 263192 has been marked as a duplicate of this bug. ***
Comment 11 John Tapsell 2011-12-04 08:01:01 UTC
Git commit fb5022b83470675be3e01b089859811e35db4e0d by John Tapsell.
Committed on 04/12/2011 at 08:59.
Pushed by johnflux into branch 'master'.

We don't need to delete all the widgets in a worksheet manually - they are part of the QObject tree

BUG:193754

M  +0    -1    ksysguard/gui/WorkSheet.cpp

http://commits.kde.org/kde-workspace/fb5022b83470675be3e01b089859811e35db4e0d