We don't need to delete all the widgets in a worksheet manually - they are part of the QObject tree

BUG:193754